versioned_docs/version-0.14/api/redditapi/models/README.md
[**@devvit/reddit v0.14.6-dev**](../README.md)

***

# models

## Enumerations

- [AboutLocations](enumerations/AboutLocations.md)
- [FlairType](enumerations/FlairType.md)
- [ModMailActionType](enumerations/ModMailActionType.md)
- [ModMailConversationState](enumerations/ModMailConversationState.md)
- [SocialLinkType](enumerations/SocialLinkType.md)
- [WikiPagePermissionLevel](enumerations/WikiPagePermissionLevel.md)

## Classes

- [AuthorFlairSettings](classes/AuthorFlairSettings.md)
- [ButtonWidget](classes/ButtonWidget.md)
- [CalendarWidget](classes/CalendarWidget.md)
- [Comment](classes/Comment.md)
- [CommunityListWidget](classes/CommunityListWidget.md)
- [CustomWidget](classes/CustomWidget.md)
- [Flair](classes/Flair.md)
- [FlairTemplate](classes/FlairTemplate.md)
- [ImageWidget](classes/ImageWidget.md)
- [Listing](classes/Listing.md)
- [ModMailService](classes/ModMailService.md)
- [ModNote](classes/ModNote.md)
- [Post](classes/Post.md)
- [PostFlairSettings](classes/PostFlairSettings.md)
- [PostFlairWidget](classes/PostFlairWidget.md)
- [PrivateMessage](classes/PrivateMessage.md)
- [Rule](classes/Rule.md)
- [Subreddit](classes/Subreddit.md)
- [SubredditBannedUser](classes/SubredditBannedUser.md)
- [SubredditContributorUser](classes/SubredditContributorUser.md)
- [SubredditDescription](classes/SubredditDescription.md)
- [SubredditModeratorUser](classes/SubredditModeratorUser.md)
- [SubredditMutedUser](classes/SubredditMutedUser.md)
- [SubredditRulesWidget](classes/SubredditRulesWidget.md)
- [SubredditWikiBannedUser](classes/SubredditWikiBannedUser.md)
- [SubredditWikiContributorUser](classes/SubredditWikiContributorUser.md)
- [SubredditWikiSettings](classes/SubredditWikiSettings.md)
- [TextAreaWidget](classes/TextAreaWidget.md)
- [User](classes/User.md)
- [Widget](classes/Widget.md)
- [WikiPage](classes/WikiPage.md)
- [WikiPageRevision](classes/WikiPageRevision.md)
- [WikiPageSettings](classes/WikiPageSettings.md)

## Interfaces

- [ModAction](interfaces/ModAction.md)

## Type Aliases

- [AboutSubredditTypes](type-aliases/AboutSubredditTypes.md)
- [AddRemovalNoteOptions](type-aliases/AddRemovalNoteOptions.md)
- [AddWidgetData](type-aliases/AddWidgetData.md)
- [AllowableFlairContent](type-aliases/AllowableFlairContent.md)
- [BackgroundImagePosition](type-aliases/BackgroundImagePosition.md)
- [BannerHeight](type-aliases/BannerHeight.md)
- [BanUserOptions](type-aliases/BanUserOptions.md)
- [BanWikiContributorOptions](type-aliases/BanWikiContributorOptions.md)
- [CommentMediaTypes](type-aliases/CommentMediaTypes.md)
- [CommentSort](type-aliases/CommentSort.md)
- [CommentSubmissionOptions](type-aliases/CommentSubmissionOptions.md)
- [CommonFlair](type-aliases/CommonFlair.md)
- [CommonSubmitPostOptions](type-aliases/CommonSubmitPostOptions.md)
- [CommunityNameFormat](type-aliases/CommunityNameFormat.md)
- [ConversationData](type-aliases/ConversationData.md)
- [ConversationResponse](type-aliases/ConversationResponse.md)
- [ConversationStateFilter](type-aliases/ConversationStateFilter.md)
- [ConversationUserData](type-aliases/ConversationUserData.md)
- [CreateFlairTemplateOptions](type-aliases/CreateFlairTemplateOptions.md)
- [CreateModNoteOptions](type-aliases/CreateModNoteOptions.md)
- [CreateRelationshipOptions](type-aliases/CreateRelationshipOptions.md)
- [CreateRuleOptions](type-aliases/CreateRuleOptions.md)
- [CreateWikiPageOptions](type-aliases/CreateWikiPageOptions.md)
- [CrosspostOptions](type-aliases/CrosspostOptions.md)
- [CrowdControlLevel](type-aliases/CrowdControlLevel.md)
- [CustomizationFlag](type-aliases/CustomizationFlag.md)
- [CustomPostRichTextFallback](type-aliases/CustomPostRichTextFallback.md)
- [CustomPostTextFallbackOptions](type-aliases/CustomPostTextFallbackOptions.md)
- [DeleteNotesOptions](type-aliases/DeleteNotesOptions.md)
- [EditCommentOptions](type-aliases/EditCommentOptions.md)
- [EditFlairTemplateOptions](type-aliases/EditFlairTemplateOptions.md)
- [EnrichedThumbnail](type-aliases/EnrichedThumbnail.md)
- [FlairBackgroundColor](type-aliases/FlairBackgroundColor.md)
- [FlairSettings](type-aliases/FlairSettings.md)
- [FlairTextColor](type-aliases/FlairTextColor.md)
- [GalleryMedia](type-aliases/GalleryMedia.md)
- [GalleryMediaStatus](type-aliases/GalleryMediaStatus.md)
- [GetBestPostsOptions](type-aliases/GetBestPostsOptions.md)
- [GetCommentsByUserOptions](type-aliases/GetCommentsByUserOptions.md)
- [GetCommentsOptions](type-aliases/GetCommentsOptions.md)
- [GetConversationResponse](type-aliases/GetConversationResponse.md)
- [GetConversationsRequest](type-aliases/GetConversationsRequest.md)
- [GetConversationsResponse](type-aliases/GetConversationsResponse.md)
- [GetDuplicatesOptions](type-aliases/GetDuplicatesOptions.md)
- [GetHotPostsOptions](type-aliases/GetHotPostsOptions.md)
- [GetModerationLogOptions](type-aliases/GetModerationLogOptions.md)
- [GetModNotesOptions](type-aliases/GetModNotesOptions.md)
- [GetPageRevisionsOptions](type-aliases/GetPageRevisionsOptions.md)
- [GetPostsByUserOptions](type-aliases/GetPostsByUserOptions.md)
- [GetPostsOptions](type-aliases/GetPostsOptions.md)
- [GetPostsOptionsWithTimeframe](type-aliases/GetPostsOptionsWithTimeframe.md)
- [GetPrivateMessagesOptions](type-aliases/GetPrivateMessagesOptions.md)
- [GetSortedPostsOptions](type-aliases/GetSortedPostsOptions.md)
- [GetSubredditUsersByTypeOptions](type-aliases/GetSubredditUsersByTypeOptions.md)
- [GetSubscribedSubredditsForCurrentUserOptions](type-aliases/GetSubscribedSubredditsForCurrentUserOptions.md)
- [GetUserFlairBySubredditOptions](type-aliases/GetUserFlairBySubredditOptions.md)
- [GetUserFlairBySubredditResponse](type-aliases/GetUserFlairBySubredditResponse.md)
- [GetUserFlairOptions](type-aliases/GetUserFlairOptions.md)
- [GetUserOverviewOptions](type-aliases/GetUserOverviewOptions.md)
- [GetWikiPageOptions](type-aliases/GetWikiPageOptions.md)
- [ImagePosition](type-aliases/ImagePosition.md)
- [InternalSetPostFlairOptions](type-aliases/InternalSetPostFlairOptions.md)
- [~~LinkFlair~~](type-aliases/LinkFlair.md)
- [ListingFetchOptions](type-aliases/ListingFetchOptions.md)
- [ListingFetchResponse](type-aliases/ListingFetchResponse.md)
- [MenuPosition](type-aliases/MenuPosition.md)
- [MessageData](type-aliases/MessageData.md)
- [ModActionData](type-aliases/ModActionData.md)
- [ModActionTarget](type-aliases/ModActionTarget.md)
- [ModActionType](type-aliases/ModActionType.md)
- [ModeratorPermission](type-aliases/ModeratorPermission.md)
- [ModeratorReport](type-aliases/ModeratorReport.md)
- [ModLogOptions](type-aliases/ModLogOptions.md)
- [ModNoteType](type-aliases/ModNoteType.md)
- [MoreObject](type-aliases/MoreObject.md)
- [Oembed](type-aliases/Oembed.md)
- [Participant](type-aliases/Participant.md)
- [PollData](type-aliases/PollData.md)
- [PollOption](type-aliases/PollOption.md)
- [PositionedImagePosition](type-aliases/PositionedImagePosition.md)
- [PostCapabilities](type-aliases/PostCapabilities.md)
- [PostSuggestedCommentSort](type-aliases/PostSuggestedCommentSort.md)
- [PostTextOptions](type-aliases/PostTextOptions.md)
- [PostType](type-aliases/PostType.md)
- [RedditVideo](type-aliases/RedditVideo.md)
- [RelationshipType](type-aliases/RelationshipType.md)
- [RemovalReason](type-aliases/RemovalReason.md)
- [RemoveRelationshipOptions](type-aliases/RemoveRelationshipOptions.md)
- [ReplyToCommentOptions](type-aliases/ReplyToCommentOptions.md)
- [SearchPostsOptions](type-aliases/SearchPostsOptions.md)
- [SecureMedia](type-aliases/SecureMedia.md)
- [SendPrivateMessageAsSubredditOptions](type-aliases/SendPrivateMessageAsSubredditOptions.md)
- [SendPrivateMessageOptions](type-aliases/SendPrivateMessageOptions.md)
- [SetCustomPostTextFallbackOptions](type-aliases/SetCustomPostTextFallbackOptions.md)
- [SetFlairOptions](type-aliases/SetFlairOptions.md)
- [SetPostFlairOptions](type-aliases/SetPostFlairOptions.md)
- [SetUserFlairBatchConfig](type-aliases/SetUserFlairBatchConfig.md)
- [SetUserFlairOptions](type-aliases/SetUserFlairOptions.md)
- [SubmitCustomPostOptions](type-aliases/SubmitCustomPostOptions.md)
- [SubmitLinkOptions](type-aliases/SubmitLinkOptions.md)
- [SubmitMediaOptions](type-aliases/SubmitMediaOptions.md)
- [SubmitPostOptions](type-aliases/SubmitPostOptions.md)
- [SubmitSelfPostOptions](type-aliases/SubmitSelfPostOptions.md)
- [SubredditData](type-aliases/SubredditData.md)
- [SubredditInfo](type-aliases/SubredditInfo.md)
- [SubredditLeaderboard](type-aliases/SubredditLeaderboard.md)
- [SubredditLeaderboardSummary](type-aliases/SubredditLeaderboardSummary.md)
- [SubredditLeaderboardSummaryRow](type-aliases/SubredditLeaderboardSummaryRow.md)
- [SubredditOptions](type-aliases/SubredditOptions.md)
- [SubredditSettings](type-aliases/SubredditSettings.md)
- [SubredditSettingsOptions](type-aliases/SubredditSettingsOptions.md)
- [SubredditStyles](type-aliases/SubredditStyles.md)
- [SubredditType](type-aliases/SubredditType.md)
- [Trophy](type-aliases/Trophy.md)
- [UnreadCountResponse](type-aliases/UnreadCountResponse.md)
- [UpdatePageSettingsOptions](type-aliases/UpdatePageSettingsOptions.md)
- [UpdateRuleOptions](type-aliases/UpdateRuleOptions.md)
- [UpdateWidgetData](type-aliases/UpdateWidgetData.md)
- [UpdateWikiPageOptions](type-aliases/UpdateWikiPageOptions.md)
- [UserFlair](type-aliases/UserFlair.md)
- [UserFlairPageOptions](type-aliases/UserFlairPageOptions.md)
- [UserNote](type-aliases/UserNote.md)
- [UserNoteLabel](type-aliases/UserNoteLabel.md)
- [UserSocialLink](type-aliases/UserSocialLink.md)
- [Vault](type-aliases/Vault.md)
- [Visibility](type-aliases/Visibility.md)
- [WikiEditMode](type-aliases/WikiEditMode.md)
- [WikiPageRevisionId](type-aliases/WikiPageRevisionId.md)
- [WikiVersion](type-aliases/WikiVersion.md)
- [WikiVersionOptions](type-aliases/WikiVersionOptions.md)
- [WithUserData](type-aliases/WithUserData.md)

## Variables

- [GalleryMediaStatus](variables/GalleryMediaStatus.md)

## Functions

- [getModerationLog](functions/getModerationLog.md)
- [getSubredditInfoById](functions/getSubredditInfoById.md)
- [getSubredditInfoByName](functions/getSubredditInfoByName.md)
- [getSubredditLeaderboard](functions/getSubredditLeaderboard.md)
- [getSubredditStyles](functions/getSubredditStyles.md)
- [getVaultByAddress](functions/getVaultByAddress.md)
- [getVaultByUserId](functions/getVaultByUserId.md)
